tests/fixtures/errors/public_alias_collision.full
error[E0100]: public alias 'x' collides with a member of the same name
 --> public_alias_collision.z:4:20
   4 |     public: unit { x: y }
     |                    ^
1 error found
